Modified the index.html to move action from button to form and tidy up of app.py

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -30,11 +30,11 @@
       </ul>
     </div>
   </div>
-  <form action='' >
+  <form action='/result' method="POST">
     <label>Title:
-      <input name ="Title" autocomplete="name">
+      <input name ="Title" autocomplete="name" required>
     </label>
-    <button formaction="/result" formmethod="POST"> Add</button>
+    <button> Add</button>
   </form>
 {% endblock %}
 
