--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -16,21 +16,38 @@
         <table>
           <tr>
             <th>Id</th>
-            <th>Status</th>
-            <th>Title</th>
+            <th style="white-space:nowrap">Update Status To</th>
+            <th style="white-space:nowrap">Current Status</th>
+            <th style="white-space:nowrap"> Title</th>
           </tr>
-        {% for item in items %}
-          <tr>
-            <td>{{ item['id'] }}</td>
-            <td>{{ item['status'] }}</td>
-            <td>{{ item['title'] }}</td>
-          </tr>
+        {% for taskList in items['taskList'] %}
+          {% for card in taskList['cards'] %}
+            <tr>
+              <td>{{ card['id'] }}</td>
+              {% if card['status'] == "Backlog" %}
+                <td><form><button formaction='/complete_item' formmethod = "POST" type = "submit" name ="cardId" value = {{ card['id'] }}> ToDo</button></form></td>
+              {% elif card['status'] == "To Do" %}
+                <td><form><button formaction='/complete_item' formmethod = "POST" type = "submit" name ="cardId" value = {{ card['id'] }}> Doing</button></form></td>
+              {% elif card['status'] == "Doing" %}
+              <td><form><button formaction='/complete_item' formmethod = "POST" type = "submit" name ="cardId" value = {{ card['id'] }}> Code Review</button></form></td>
+              {% elif card['status'] == "Code Review" %}
+              <td><form><button formaction='/complete_item' formmethod = "POST" type = "submit" name ="cardId" value = {{ card['id'] }}> Testing</button></form></td>
+              {% elif card['status'] == "Testing" %}
+              <td><form><button formaction='/complete_item' formmethod = "POST" type = "submit" name ="cardId" value = {{ card['id'] }}> Done</button></form></td>
+              {% elif card['status'] == "Done" %}
+              <td><form><button formaction='/complete_item' formmethod = "POST" type = "submit" name ="cardId" value = {{ card['id'] }}> ToDo</button></form></td>
+
+              {% endif %}
+              <td>{{ card['status'] }}</td>
+              <td>{{ card['name'] }}</td>
+            </tr>
+          {% endfor %}
         {% endfor %}
       </table>
       </ul>
     </div>
   </div>
-  <form action='/result' method="POST">
+  <form action='/createNewToDoItems' method="POST">
     <label>Title:
       <input name ="Title" autocomplete="name" required>
     </label>
